syntax = "proto3";

package c1.connector.v2;

import "c1/connector/v2/asset.proto";
import "c1/connector/v2/resource.proto";
import "google/protobuf/any.proto";
import "google/protobuf/struct.proto";
import "validate/validate.proto";

option go_package = "github.com/conductorone/baton-sdk/pb/c1/connector/v2";

message ConnectorServiceCleanupRequest {
  repeated google.protobuf.Any annotations = 1;
}
message ConnectorServiceCleanupResponse {
  repeated google.protobuf.Any annotations = 1;
}

service ConnectorService {
  rpc GetMetadata(ConnectorServiceGetMetadataRequest) returns (ConnectorServiceGetMetadataResponse);
  rpc Validate(ConnectorServiceValidateRequest) returns (ConnectorServiceValidateResponse);
  rpc Cleanup(ConnectorServiceCleanupRequest) returns (ConnectorServiceCleanupResponse);
}

message ConnectorMetadata {
  string display_name = 1 [(validate.rules).string = {
    min_bytes: 1
    max_bytes: 1024
  }];
  string help_url = 2 [(validate.rules).string = {
    min_bytes: 1
    max_bytes: 1024
    uri: true
    prefix: "https://"
    ignore_empty: true
  }];
  c1.connector.v2.AssetRef icon = 3;
  c1.connector.v2.AssetRef logo = 4;
  google.protobuf.Struct profile = 5;
  repeated google.protobuf.Any annotations = 6;
  string description = 7 [(validate.rules).string = {
    min_bytes: 1
    max_bytes: 4096
    ignore_empty: true
  }];
  ConnectorCapabilities capabilities = 8;
}

enum Capability {
  CAPABILITY_UNSPECIFIED = 0;
  CAPABILITY_PROVISION = 1;
  CAPABILITY_SYNC = 2;
  CAPABILITY_EVENT_FEED = 3;
  CAPABILITY_TICKETING = 4;
  CAPABILITY_ACCOUNT_PROVISIONING = 5;
  CAPABILITY_CREDENTIAL_ROTATION = 6;
  CAPABILITY_RESOURCE_CREATE = 7;
  CAPABILITY_RESOURCE_DELETE = 8;
}

message ConnectorCapabilities {
  repeated ResourceTypeCapability resource_type_capabilities = 1;
  repeated Capability connector_capabilities = 2;
}

message ResourceTypeCapability {
  c1.connector.v2.ResourceType resource_type = 1;
  repeated Capability capabilities = 2;
}

message ConnectorServiceGetMetadataRequest {}

message ConnectorServiceGetMetadataResponse {
  ConnectorMetadata metadata = 1;
}

message ConnectorServiceValidateRequest {}

// NOTE(morgabra) We're expecting correct grpc.Status responses
// for things like 401/403/500, etc
message ConnectorServiceValidateResponse {
  repeated google.protobuf.Any annotations = 1;
}
